# TG-Chatbot

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9f7ea91d2267_create_user_and_team_table.py  e85a0e6d938a_add_tgday_table.py
app/: main.py  utils.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: login.py  team.py  tgday.py  user.py
app/core/: config.py
app/db/: init_db.py
app/models/: __init__.py  team.py  tgday.py  user.py
app/schemas/: __init__.py  team.py  tgday.py  user.py
app/service/: __init__.py  team.py  tgday.py  user.py
app/tests/: conftest.py  test_user.py
